// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IMGSQUAREUI SNAPSHOTS TESTS border medium ImgSquareUI should not be changed 1`] = `
<img
  alt="Руперт"
  class="image image_medium"
  data-nimg="fill"
  decoding="async"
  loading="lazy"
  sizes="100vw"
  src="/_next/image?url=%2Fimg%2FactorTest1.jpg&w=3840&q=75"
  srcset="/_next/image?url=%2Fimg%2FactorTest1.jpg&w=640&q=75 640w, /_next/image?url=%2Fimg%2FactorTest1.jpg&w=750&q=75 750w, /_next/image?url=%2Fimg%2FactorTest1.jpg&w=828&q=75 828w, /_next/image?url=%2Fimg%2FactorTest1.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimg%2FactorTest1.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimg%2FactorTest1.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimg%2FactorTest1.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimg%2FactorTest1.jpg&w=3840&q=75 3840w"
  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
/>
`;

exports[`IMGSQUAREUI SNAPSHOTS TESTS border small ImgSquareUI should not be changed 1`] = `
<img
  alt="Руперт"
  class="image"
  data-nimg="fill"
  decoding="async"
  loading="lazy"
  sizes="100vw"
  src="/_next/image?url=%2Fimg%2FactorTest1.jpg&w=3840&q=75"
  srcset="/_next/image?url=%2Fimg%2FactorTest1.jpg&w=640&q=75 640w, /_next/image?url=%2Fimg%2FactorTest1.jpg&w=750&q=75 750w, /_next/image?url=%2Fimg%2FactorTest1.jpg&w=828&q=75 828w, /_next/image?url=%2Fimg%2FactorTest1.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimg%2FactorTest1.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimg%2FactorTest1.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimg%2FactorTest1.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimg%2FactorTest1.jpg&w=3840&q=75 3840w"
  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
/>
`;
